# kairos-fastapi

./: .flake8  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  routes.md
app/: __init__.py  config.py
app/ai_core/: __init__.py  analyzer_agent.py  censor_agent.py  check_need_test.py  course_gen_agent.py  description_generator_agent.py  editor_agent.py  iterative_course_generation_agent.py  parser_agent.py  plan_agent.py  plan_by_prompt_agent.py  prompt_agent.py  prompt_by_theme_agent.py  searcher_agent.py  summarizer_agent.py  test_maker_agent.py  theory_generator_agent.py
app/mistral_ai_initializer/: __init__.py  mistral_custom_class.py
app/models/: __all_models.py  __init__.py  courses.py  courses_model.py  create_session.py  db_session.py
app/routes/: routes.py
app/schemas/: __init__.py  course_schema.py  course_to_delete_schema.py  course_to_edit_schema.py  course_to_save_schema.py
app/schemas/course/: __init__.py  course.py  create.py  edit.py  list.py  save.py
app/schemas/responses/: __init__.py  response.py  save.py
database/: kairos.db
