[project]
name = "kairos-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "flask-restful>=0.3.10",
    "mistralai>=1.7.0",
    "sqlmodel>=0.0.24",
]
